# FIT_CTF

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  click-commands.html  genindex.html  index.html  manage_db.sh  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: click-commands.doctree  environment.pickle  index.doctree
.github/workflows/: build-documentation.yaml  run-linter.yaml  run-tests.yaml
config/base_images/ping_http/: Containerfile
config/base_images/ping_http/source/: main.py  requirements.txt
config/base_images/user_rhel/: Containerfile
config/base_images/user_ubuntu/: Containerfile
config/setup/: 99-ctf-rule.conf  env_example
db/: compose.yaml
docs/: README.md  TODO.md  architecture.drawio
docs/sphinx/: click-commands.rst  conf.py
src/fit_ctf_backend/: __init__.py  __main__.py  constants.py  ctf_manager.py  demo.py  exceptions.py  templates.py
src/fit_ctf_backend/cli/: __init__.py  completion.py  data_mgmt.py  debug.py  enrollment.py  module.py  other.py  project.py  project_cluster.py  user.py  user_cluster.py  utils.py
src/fit_ctf_db_models/: __init__.py  base.py  cluster.py  compose_objects.py  network.py  project.py  service.py  user.py  user_config.py  user_enrollment.py  user_progress.py
src/fit_ctf_models/: base.py  cluster.py  module_manager.py  project.py  user.py  user_enrollment.py
src/fit_ctf_rendezvous/: __main__.py  actions.py  view.py
src/fit_ctf_rendezvous/custom_widgets/: __init__.py  content_widget.py  password_field.py  windows.py
src/fit_ctf_templates/: __init__.py  server_compose.yaml.j2  shadow.j2
src/fit_ctf_templates/module/project/: module_compose.yaml.j2
src/fit_ctf_templates/module/user/: module_compose.yaml.j2
src/fit_ctf_templates/server_project/: server_compose.yaml.j2  user_compose.yaml.j2
src/fit_ctf_user_control/: __main__.py  actions.py  constants.py  view.py
src/fit_ctf_user_control/custom_widgets/: content_widget.py  password_field.py  windows.py
src/fit_ctf_utils/: __init__.py  constants.py  exceptions.py  mongo_queries.py  podman_utils.py  types.py
src/fit_ctf_utils/auth/: auth_interface.py  local_auth.py
src/fit_ctf_utils/config_loader/: __init__.py  data_parser_interface.py  yaml_parser.py
src/fit_ctf_utils/container_client/: base_container_client.py  container_client_interface.py  docker_client.py  mock_client.py  podman_client.py
tests/: conftest.py  test_base.py  test_empty.py  test_enroll.py  test_module.py  test_podman.py  test_project.py  test_user.py
(+9 files in other folders)
