[tool.poetry]
name = "fit-ctf"
version = "0.1.0"
description = "A CTF backend for an assignment of a class BIS at FIT, Brno University of Technology."
authors = ["Hung Do <hungdojan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hungdojan/FIT_CTF"
packages = [
    { include = "fit_ctf_backend", from = "src" },
    { include = "fit_ctf_user_control", from = "src" },
    { include = "fit_ctf_db_models", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.3"
passlib = "^1.7.4"
pymongo = "^4.6.2"
redis = "^5.0.3"
pytermgui = "^7.7.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
coverage = "^7.4.3"
hypothesis = "^6.98.11"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-mock = "^3.12.0"
pytest-picked = "^0.5.0"
pytest-sugar = "^1.0.0"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctf_backend = "fit_ctf_backend.__main__:main"
user_control = "fit_ctf_user_control.__main__:main"
