[tool.poetry]
name = "fit-ctf"
version = "0.1.0"
description = "A CTF backend for an assignment of a class BIS at FIT, Brno University of Technology."
authors = ["Hung Do <hungdojan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hungdojan/FIT_CTF"
packages = [
    { include = "fit_ctf_backend", from = "src" },
    { include = "fit_ctf_rendezvous", from = "src" },
    { include = "fit_ctf_db_models", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.3"
passlib = "^1.7.4"
pymongo = "^4.6.2"
redis = "^5.0.3"
pytermgui = "^7.7.1"
python-dotenv = "^1.0.1"
click = "^8.1.7"
tabulate = "^0.9.0"


setuptools = "^70.0.0"
[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
coverage = "^7.4.3"
hypothesis = "^6.98.11"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-mock = "^3.12.0"
pytest-picked = "^0.5.0"
pytest-sugar = "^1.0.0"


mongomock = "^4.1.2"
[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

click-man = "^0.4.1"
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.html]
directory = "tests/reports/htmlcov"

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ctf_backend = "fit_ctf_backend.__main__:main"
ctf_rendezvous = "fit_ctf_rendezvous.__main__:main"
